google image add

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <h1 id="title">google</h1>
+    <h1 id="title"><a href="https://www.google.com/"><img src="images/googleimg.png" alt="Go google it"></a></h1>
+
 </body>
+
 </html>
