--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="images/googleicon.ico">
 </head>
 
 <body>
-    <h1 id="title"><a href="https://www.google.com/"><img src="images/googleimg.png" alt="Go google it"></a></h1>
+    <hearder id="header">
+        <h1 id="title">
+            <a href="https://www.google.com/">
+                <img src="images/googleimg.png" alt="Go google it">
+            </a>
+        </h1>
+        <div id="bar"></div>
+    </hearder>
 
 </body>
 
