--- a/index.html
+++ b/index.html
@@ -11,11 +11,32 @@
 
 <body>
     <hearder id="header">
-        <h1 id="title">
-            <a href="https://www.google.com/">
-                <img src="images/googleimg.png" alt="Go google it">
-            </a>
-        </h1>
+        <div id="header_content">
+            <h1 id="title">
+                <a href="https://www.google.com/">
+                    <img src="images/googleimg.png" alt="Go google it">
+                </a>
+            </h1>
+            <div id="search">
+                <div id="search_form">
+                    <form id="form" method="get" action="https://www.google.com/search" target="_blank">
+                        <input type="search" name="q" placeholder="" autofocus required>
+                        <input type="submit"> 
+                    </form>
+                </div>
+                <div id="search_options">
+
+                </div>
+            </div>
+            <div id="user">
+                <div id="user_apps">
+
+                </div>
+                <div id="user">
+
+                </div>
+            </div>
+        </div>
         <div id="bar"></div>
     </hearder>
 
