--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+<!-- header start -->
     <hearder id="header">
         <div id="header_content">
             <h1 id="title">
@@ -21,7 +23,8 @@
                 <div id="search_form">
                     <form id="form" method="get" action="https://www.google.com/search" target="_blank">
                         <input type="search" name="q" placeholder="" autofocus required>
-                        <input type="submit"> 
+                        <button type="submit"><img src="images/Lupagoogle.png" alt=""></button>
+                        <!-- <input type="submit"> -->
                     </form>
                 </div>
                 <div id="search_options">
@@ -39,6 +42,7 @@
         </div>
         <div id="bar"></div>
     </hearder>
+<!-- header end -->
 
 </body>
 
