--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </div>
             </div>
             <div id="user">
+                <h2>hello</h2>
                 <div id="user_apps">
 
                 </div>
