--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<!-- header start -->
+    <!-- header start -->
     <hearder id="header">
         <div id="header_content">
             <h1 id="title">
@@ -28,22 +28,23 @@
                     </form>
                 </div>
                 <div id="search_options">
-
+                    
                 </div>
             </div>
             <div id="user">
-                <h2>hello</h2>
                 <div id="user_apps">
-
+                    <a href=""><img src="images/9x9.png" alt="User Apps"></a>
                 </div>
-                <div id="user">
-
+                <div id="user_account">
+                    <a
+                        href="https://accounts.google.com/SignOutOptions?hl=es-419&continue=https://www.google.com/search%3Fq%3Dbuild%2Bthis%2Bwebpage"><img
+                            src="images/usuario.png" alt=""></a>
                 </div>
             </div>
         </div>
         <div id="bar"></div>
     </hearder>
-<!-- header end -->
+    <!-- header end -->
 
 </body>
 
