--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
               action="https://www.google.com/search"
               target="_blank"
             >
-              <input type="search" name="q" placeholder="" autofocus required />
+              <input
+                type="search"
+                name="q"
+                placeholder="Search"
+                autofocus
+                required
+              />
               <button type="submit">
                 <img src="images/Lupagoogle.png" alt="" />
               </button>
