--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   <body>
     <!-- header start -->
     <hearder id="header">
+      <!-- header -->
       <div id="header_content">
+        <!-- header title -->
         <h1 id="title">
           <a href="https://www.google.com/">
             <img src="images/googleimg.png" alt="Go google it" />
           </a>
         </h1>
+
+        <!-- header search bar -->
         <div id="search">
           <div id="search_form">
             <form
@@ -42,8 +46,12 @@
               <!-- <input type="submit"> -->
             </form>
           </div>
-          <div id="search_options"></div>
+          <div id="search_options">
+            <a href="" id="" class="srch_button"><img src="#" alt="" /></a>
+          </div>
         </div>
+
+        <!-- header user -->
         <div id="user">
           <div id="user_apps">
             <a href=""><img src="images/9x9.png" alt="User Apps" /></a>
