more changes on the header

--- a/index.html
+++ b/index.html
@@ -41,13 +41,40 @@
                 required
               />
               <button type="submit">
+                <img src="images/searchicon.png" alt="voice search" />
+              </button>
+              <button type="submit">
                 <img src="images/Lupagoogle.png" alt="" />
               </button>
-              <!-- <input type="submit"> -->
             </form>
           </div>
           <div id="search_options">
-            <a href="" id="" class="srch_button"><img src="#" alt="" /></a>
+            <a href="#" id="all" class="srch_button">
+              <img src="images/allicon.png" alt="All" />
+              <p>All</p>
+            </a>
+            <a href="#" id="video" class="srch_button">
+              <img src="images/videoicon.PNG" alt="video" />
+              <p>Video</p>
+            </a>
+            <a href="#" id="news" class="srch_button">
+              <img src="images/newsicon.PNG" alt="news" />
+              <p>News</p>
+            </a>
+            <a href="#" id="maps" class="srch_button">
+              <img src="images/mapsicon.PNG" alt="news" />
+              <p>Maps</p>
+            </a>
+            <a href="#" id="images" class="srch_button">
+              <img src="images/imageicon.PNG" alt="news" />
+              <p>Images</p>
+            </a>
+            <a href="#" id="more" class="srch_button">
+              <img id="more_img" src="images/moreicon.PNG" alt="news" />
+              <p>More</p>
+            </a>
+            <a href="#" id="preferences" class="srch_button"> Preferences </a>
+            <a href="#" id="tools" class="srch_button"> Tools </a>
           </div>
         </div>
 
@@ -64,7 +91,6 @@
           </div>
         </div>
       </div>
-      <div id="bar"></div>
     </hearder>
     <!-- header end -->
   </body>
