--- a/index.html
+++ b/index.html
@@ -93,5 +93,10 @@
       </div>
     </hearder>
     <!-- header end -->
+
+    <!-- main start -->
+
+    <main></main>
+    <!-- main end -->
   </body>
 </html>
