all pages added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,240 @@
 
     <!-- main start -->
 
-    <main></main>
+    <main id="main">
+      <div id="results">
+        <p class="all_pages">About 93,200,000 results (0.45 seconds)</p>
+        <!-- Result page #1 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #2 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #3 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #4 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #5 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #6 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #7 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #8 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #9 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+
+        <!-- Result page #10 -->
+        <div class="result_page">
+          <a
+            href="https://victor-lf.github.io/google-search-results/"
+            class="page"
+            >victor-lf.github.io/google-search-...</a
+          ><a href="#">▾</a>
+          <a
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            class="translate"
+            >Translate this page</a
+          >
+          <h2>
+            <a href="https://victor-lf.github.io/google-search-results/">
+              build this webpage - GitHub Pages</a
+            >
+          </h2>
+          <p class="page_text">
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+      </div>
+    </main>
     <!-- main end -->
   </body>
 </html>
