all pages finished

--- a/index.html
+++ b/index.html
@@ -124,194 +124,186 @@
 
         <!-- Result page #2 -->
         <div class="result_page">
-          <a
-            href="https://victor-lf.github.io/google-search-results/"
-            class="page"
-            >victor-lf.github.io/google-search-...</a
+          <a href="https://christine-27.github.io/google-homepage/" class="page"
+            >christine-27.github.io › google-ho...</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://christine-27.github.io/google-homepage/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
+            <a href="https://christine-27.github.io/google-homepage/">
               build this webpage - GitHub Pages</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            With zero coding experience, artist building 180 webpages . ... days
+            ago, having never done any programming in her life, Jennifer Dewalt
+            built her first webpage.
           </p>
         </div>
 
         <!-- Result page #3 -->
         <div class="result_page">
-          <a
-            href="https://victor-lf.github.io/google-search-results/"
-            class="page"
-            >victor-lf.github.io/google-search-...</a
-          ><a href="#">▾</a>
-          <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
-            class="translate"
-            >Translate this page</a
+          <a href="https://www.youtube.com/watch/YWA-xbsJrVg" class="page">
+            www.youtube.com › watch › YWA-xbsJrVg</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.youtube.com/watch/YWA-xbsJrVg">
+              How to Make a Website in 10 mins - Simple & Easy - YouTube</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            3 ene. 2018 — Start Here ➜
+            https://websitelearners.com/video/make-a-website/#startGet our NEW
+            Course ...
           </p>
         </div>
 
         <!-- Result page #4 -->
         <div class="result_page">
           <a
-            href="https://victor-lf.github.io/google-search-results/"
+            href="https://www.websitebuilderexpert.com/building-websites/"
             class="page"
-            >victor-lf.github.io/google-search-...</a
+            >www.websitebuilderexpert.com › b...</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.websitebuilderexpert.com/building-websites/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.websitebuilderexpert.com/building-websites/">
+              How to Build a Website 2021 | A Step-by-Step Beginner's Guide</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            17 dic. 2020 — How to Build a Website from Scratch. We'll look at
+            how to make a website with both a website builder and WordPress,
+            with no steps left
+            out.https://www.websitebuilderexpert.com/building-websites/
           </p>
         </div>
 
         <!-- Result page #5 -->
         <div class="result_page">
-          <a
-            href="https://victor-lf.github.io/google-search-results/"
-            class="page"
-            >victor-lf.github.io/google-search-...</a
+          <a href="https://websitesetup.org/" class="page">websitesetup.org</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://websitesetup.org/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://websitesetup.org/">
+              How to Create a Website: Step-by-Step Guide for Beginners ...</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            5 nov. 2020 — Learn how to make a website and set it up. This site
+            contains different tutorials on how to build a website using
+            WordPress, Joomla, Drupal ...
           </p>
         </div>
 
         <!-- Result page #6 -->
         <div class="result_page">
           <a
-            href="https://victor-lf.github.io/google-search-results/"
+            href="https://www.pcmag.com/how-to/how-to-create-a-website"
             class="page"
-            >victor-lf.github.io/google-search-...</a
+            >www.pcmag.com › how-to › how-t...</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.pcmag.com/how-to/how-to-create-a-website&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.pcmag.com/how-to/how-to-create-a-website">
+              How to Create a Website | PCMag</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            They also won't make you a web designer, a job that's distinct from
+            building a site. Still, these services and software will ease some
+            of the headaches that come ...
           </p>
         </div>
 
         <!-- Result page #7 -->
         <div class="result_page">
           <a
-            href="https://victor-lf.github.io/google-search-results/"
+            href="https://www.google.com/business/website-builder/"
             class="page"
-            >victor-lf.github.io/google-search-...</a
+            >www.google.com › business › web...</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.google.com/business/website-builder/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.google.com/business/website-builder/">
+              Free Website Builder For Your Business - Google My Business</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            With our website builder's built-in features, you can showcase
+            buttons on your ... services, and your business' one-of-a-kind story
+            – and we'll make it stand out.
           </p>
         </div>
 
         <!-- Result page #8 -->
         <div class="result_page">
-          <a
-            href="https://victor-lf.github.io/google-search-results/"
-            class="page"
-            >victor-lf.github.io/google-search-...</a
+          <a href="https://www.squarespace.com/" class="page"
+            >www.squarespace.com</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.squarespace.com/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.squarespace.com/">
+              Squarespace: Build a Website – Website Builder</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            Squarespace is the all-in-one solution for anyone looking to create
+            a beautiful website. Domains, eCommerce, hosting, galleries,
+            analytics, and 24/7 support all ...
           </p>
         </div>
 
         <!-- Result page #9 -->
         <div class="result_page">
-          <a
-            href="https://victor-lf.github.io/google-search-results/"
-            class="page"
-            >victor-lf.github.io/google-search-...</a
+          <a href="https://www.webnode.es/" class="page">www.webnode.com</a
           ><a href="#">▾</a>
           <a
-            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
+            href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.webnode.com/&prev=search&pto=aue"
             class="translate"
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a href="https://www.webnode.es/">
+              Webnode: Create a free website easily | Free website builder</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            Easily build your website with Webnode online editor. Domain names
+            and hosting are included. Fast and local support will take care of
+            you.
           </p>
         </div>
 
         <!-- Result page #10 -->
         <div class="result_page">
           <a
-            href="https://victor-lf.github.io/google-search-results/"
+            href="https://www.webhostingsecretrevealed.net/blog/web-hosting-guides/make-a-website/"
             class="page"
-            >victor-lf.github.io/google-search-...</a
+            >www.webhostingsecretrevealed.net › ...</a
           ><a href="#">▾</a>
           <a
             href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://victor-lf.github.io/google-search-results/&prev=search&pto=aue"
@@ -319,14 +311,29 @@
             >Translate this page</a
           >
           <h2>
-            <a href="https://victor-lf.github.io/google-search-results/">
-              build this webpage - GitHub Pages</a
+            <a
+              href="https://translate.google.com/translate?hl=es-419&sl=en&u=https://www.webhostingsecretrevealed.net/blog/web-hosting-guides/make-a-website/&prev=search&pto=aue"
+            >
+              How to Create a Website: Step-by-Step Tutorial</a
             >
           </h2>
           <p class="page_text">
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
+            Go to
+            <a
+              href="https://www.webhostingsecretrevealed.net/blog/web-hosting-guides/make-a-website/#1"
+            >
+              <b>Creating</b> from scratch</a
+            >
+            Creating from scratch — There are three ways to make a website:
+            Creating from scratch; Using a content management system (CMS);
+            Using a website ...
           </p>
+        </div>
+
+        <!-- related -->
+
+        <div class="related">
+          <h2>Searches related to build this webpage</h2>
         </div>
       </div>
     </main>
