--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="header_content">
         <!-- header title -->
         <h1 id="title">
-          <a href="https://www.google.com/">
+          <a href="https://www.google.com/" title="Go to Google home page">
             <img src="images/googleimg.png" alt="Go google it" />
           </a>
         </h1>
