--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
               id="form"
               method="get"
               action="https://www.google.com/search"
-              target="_blank"
+              target="_self"
+              rel="alternate"
             >
               <input
                 type="search"
