add related questions

--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
           </p>
         </div>
 
+        <!-- Related questions -->
+        <div class="related_question">
+          <h2>Related Questions</h2>
+          <a href="#">How can I create my own webpage?</a>
+          <a href="#">How much does it cost to build a website?</a>
+          <a href="#">How can I create my own website for free?</a>
+          <a href="#">What is the best program to build a website?</a>
+        </div>
+
         <!-- Result page #3 -->
         <div class="result_page">
           <a href="https://www.youtube.com/watch/YWA-xbsJrVg" class="page">
