add related search

--- a/index.html
+++ b/index.html
@@ -344,6 +344,36 @@
 
         <div class="related">
           <h2>Searches related to build this webpage</h2>
+          <div class="related_search">
+            <div class="col_a">
+              <div class="go_to">
+                <a href="#">website builder</a>
+              </div>
+              <div class="go_to">
+                <a href="#">squarespace</a>
+              </div>
+              <div class="go_to">
+                <a href="#">free website builder</a>
+              </div>
+              <div class="go_to">
+                <a href="#">buildwith</a>
+              </div>
+            </div>
+            <div class="col_b">
+              <div class="go_to">
+                <a href="#">how to create a website from scratch</a>
+              </div>
+              <div class="go_to">
+                <a href="#">best website builder</a>
+              </div>
+              <div class="go_to">
+                <a href="#">how to make a web page</a>
+              </div>
+              <div class="go_to">
+                <a href="#">make a web en español</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
