all main content finished

--- a/index.html
+++ b/index.html
@@ -375,6 +375,30 @@
             </div>
           </div>
         </div>
+        <table class="table">
+          <tbody class="tb_body">
+            <tr class="tr">
+              <td class="g"><img src="images/G.png" alt="" /></td>
+              <td class="o or"><img src="images/or.png" alt="" /> 1</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 2</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 3</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 4</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 5</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 6</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 7</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 8</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 9</td>
+              <td class="o"><img src="images/oy.png" alt="" /> 10</td>
+              <td class="gle">
+                <div class="next">
+                  <img class="gle_img" src="images/gle.png" alt="" />
+                  <img class="n_img" src="images/next.png" alt="" />
+                </div>
+                <div class="next_t">Next</div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </main>
     <!-- main end -->
