--- a/index.html
+++ b/index.html
@@ -402,5 +402,34 @@
       </div>
     </main>
     <!-- main end -->
+
+    <!-- footer start -->
+
+    <footer class="footer">
+      <div class="location">
+        <span>Location</span>
+        <span>Your places</span>
+        <span>Accurate Location</span>
+        <span>More information</span>
+      </div>
+      <div class="page_info">
+        <a
+          href="https://support.google.com/websearch/?p=ws_results_help&hl=es-419&fg=1"
+          class="page_link"
+          >Help</a
+        >
+        <a href="#" class="page_link">Send Comments</a>
+        <a
+          href="https://policies.google.com/privacy?hl=es-419&fg=1"
+          class="page_link"
+          >Privacy</a
+        >
+        <a
+          href="https://policies.google.com/terms?hl=es-419&fg=1"
+          class="page_link"
+          >Conditions</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
